<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.sekelenao</groupId>
    <artifactId>small-csv</artifactId>
    <version>2.0.0</version>
    <packaging>jar</packaging>

    <name>SmallCSV</name>
    <description>SmallCSV is a library designed for easy data manipulation, simplifying the import and export processes.
        You don't need to worry about special characters or other complexities during parsing. The focus has been
        directed towards prioritizing speed and security. The level of abstraction allows you to forget that you're
        working with a CSV format.
    </description>
    <url>https://github.com/Sekelenao/SmallCSV</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://www.opensource.org/licenses/mit-license.php</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Sekelenao</name>
            <email>sekelenao@protonmail.com</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/Sekelenao/SmallCSV.git</connection>
        <developerConnection>scm:git:ssh://github.com/Sekelenao/SmallCSV.git</developerConnection>
        <url>https://github.com/Sekelenao/SmallCSV</url>
    </scm>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/sekelenao/SmallYAML/issues</url>
    </issueManagement>

    <properties>

        <!-- Dependencies -->
        <dependency.junit.version>6.1.0-M1</dependency.junit.version>

        <!-- Java version -->
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <minimum.maven.version>3.6.3</minimum.maven.version>

        <!-- Plugins versions -->
        <plugin.maven.compiler.version>3.15.0</plugin.maven.compiler.version>
        <plugin.maven.enforcer.version>3.6.2</plugin.maven.enforcer.version>
        <plugin.maven.surefire.version>3.5.5</plugin.maven.surefire.version>
        <plugin.maven.surefire.report.version>3.5.4</plugin.maven.surefire.report.version>
        <plugin.jacoco.version>0.8.14</plugin.jacoco.version>
        <plugin.maven.site.version>4.0.0-M16</plugin.maven.site.version>
        <plugin.maven.project.info.reports.version>3.9.0</plugin.maven.project.info.reports.version>
        <plugin.maven.javadoc.version>3.12.0</plugin.maven.javadoc.version>
        <plugin.maven.source.version>3.4.0</plugin.maven.source.version>
        <plugin.maven.jxr.version>3.6.0</plugin.maven.jxr.version>
        <plugin.maven.gpg.version>3.2.8</plugin.maven.gpg.version>
        <plugin.maven.central.publishing.version>0.10.0</plugin.maven.central.publishing.version>

        <!-- Project configs -->
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <test.minimum.coverage>0.90</test.minimum.coverage>
        <minimum.maven.version>3.6.3</minimum.maven.version>

    </properties>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${dependency.junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${plugin.maven.compiler.version}</version>
                <configuration>
                    <compilerArgs>
                        <arg>-Xlint:-module</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${plugin.maven.enforcer.version}</version>
                <executions>
                    <execution>
                        <id>enforce-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>[${minimum.maven.version},)</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>[${java.version},)</version>
                                </requireJavaVersion>
                            </rules>
                            <fail>true</fail>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${plugin.maven.surefire.version}</version>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${plugin.jacoco.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>jacoco-check</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <rule>
                                    <element>BUNDLE</element>
                                    <limits>
                                        <limit>
                                            <counter>INSTRUCTION</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>${test.minimum.coverage}</minimum>
                                        </limit>
                                        <limit>
                                            <counter>BRANCH</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>${test.minimum.coverage}</minimum>
                                        </limit>
                                    </limits>
                                </rule>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>


    </build>

    <profiles>
        <profile>
            <id>release-on-maven-central</id>
            <build>
                <plugins>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>${plugin.maven.javadoc.version}</version>
                        <configuration>
                            <source>${java.version}</source>
                            <detectJavaApiLink>true</detectJavaApiLink>
                            <links>
                                <link>https://docs.oracle.com/en/java/javase/${java.version}/docs/api/</link>
                            </links>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>${plugin.maven.source.version}</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>${plugin.maven.gpg.version}</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>${plugin.maven.central.publishing.version}</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                            <autoPublish>true</autoPublish>
                        </configuration>
                    </plugin>

                </plugins>
            </build>
        </profile>
    </profiles>

</project>